tests/rustdoc-ui/intra-doc/issue-108653-associated-items-8.stderr
error: `u32::MAX` is both an associated constant and an associated type
  --> $DIR/issue-108653-associated-items-8.rs:4:7
   |
LL | /// [`u32::MAX`]
   |       ^^^^^^^^ ambiguous link
   |
note: the lint level is defined here
  --> $DIR/issue-108653-associated-items-8.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to link to the associated constant, prefix with `const@`
   |
LL | /// [`const@u32::MAX`]
   |       ++++++
help: to link to the associated type, prefix with `type@`
   |
LL | /// [`type@u32::MAX`]
   |       +++++

error: aborting due to 1 previous error

